samples/ip6tables-save.txt
# Generated by ip6tables-save v1.8.9 on Mon May 18 12:00:00 2026
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -s ::1/128 -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -d ff02::/16 -j ACCEPT
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "DROP-INPUT6: "
-A INPUT -j DROP
COMMIT
